--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,12 +18,14 @@
     "@angular/core": "~9.1.6",
     "@angular/fire": "^6.0.0",
     "@angular/forms": "~9.1.6",
+    "@angular/google-maps": "^9.2.4",
     "@angular/material": "^9.2.3",
     "@angular/platform-browser": "~9.1.6",
     "@angular/platform-browser-dynamic": "~9.1.6",
     "@angular/router": "~9.1.6",
-    "ngx-doc-viewer": "^1.1.0",
+    "chart.js": "^2.9.3",
     "firebase": "^7.13.2",
+    "ngx-doc-viewer": "^1.1.0",
     "rxjs": "~6.5.5",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
